benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_Zeroes_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_Zeroes.rs
Time: 2025-09-15 18:49:55

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:21
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:35
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:107
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                                                                                           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:119
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                                                                                                       ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:35:11
   |
35 |   if n == 0nat { Vec::new() } else {
   |           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:36:30
   |
36 |     let mut v = nat2bits(n / 2nat);
   |                              ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:37:19
   |
37 |     v.push(if n % 2nat == 0nat { '0' } else { '1' });
   |                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:37:27
   |
37 |     v.push(if n % 2nat == 0nat { '0' } else { '1' });
   |                           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:53:21
   |
53 |     return nat2bits(1nat);
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:52:19
   |
52 |   if sy@.len() == 0 {
   |      ---------    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:21
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:35
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:107
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                                                                                           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:28:119
   |
28 |   if s.len() == 0 { 0nat } else { 2nat * str2nat(&s[..s.len() - 1].to_vec()) + (if s[s.len() - 1] == '1' {1nat} else {0nat}) }
   |                                                                                                                       ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:35:11
   |
35 |   if n == 0nat { Vec::new() } else {
   |           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:36:30
   |
36 |     let mut v = nat2bits(n / 2nat);
   |                              ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:37:19
   |
37 |     v.push(if n % 2nat == 0nat { '0' } else { '1' });
   |                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:37:27
   |
37 |     v.push(if n % 2nat == 0nat { '0' } else { '1' });
   |                           ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:53:21
   |
53 |     return nat2bits(1nat);
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Zeroes_impl.rs:52:19
   |
52 |   if sy@.len() == 0 {
   |      ---------    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
